global config changes

--- a/B737-800X/flaps.yaml
+++ b/B737-800X/flaps.yaml
@@ -19,67 +19,67 @@ actions:
     name: move flaps up
     type: single
     icon: red-button
-    label: Move Up
+    label: MOVE UP
     command: FlyWithLua/B738/Cmd_MP_Flaps_Up
   - index: 19
     name: flaps up
     type: single
     icon: orange-button
-    label: Flaps Up
+    label: UP
     command: laminar/B738/push_button/flaps_0
   - index: 20
     name: flaps 1
     type: single
     icon: orange-button
-    label: Flaps 1
+    label: 1
     command: laminar/B738/push_button/flaps_1
   - index: 21
     name: flaps 5
     type: single
     icon: orange-button
-    label: Flaps 5
+    label: 5
     command: laminar/B738/push_button/flaps_5
   - index: 22
     name: flaps 15
     type: single
     icon: orange-button
-    label: Flaps 15
+    label: 15
     command: laminar/B738/push_button/flaps_15
   - index: 23
     name: flaps 30
     type: single
     icon: orange-button
-    label: Flaps 30
+    label: 30
     command: laminar/B738/push_button/flaps_30
   - index: 26
     name: move flaps down
     type: single
     icon: blue-button
-    label: Move Down
+    label: MOVE DOWN
     command: FlyWithLua/B738/Cmd_MP_Flaps_Dn
   - index: 28
     name: flaps 2
     type: single
     icon: orange-button
-    label: Flaps 2
+    label: 2
     command: laminar/B738/push_button/flaps_2
   - index: 29
     name: flaps 10
     type: single
     icon: orange-button
-    label: Flaps 10
+    label: 10
     command: laminar/B738/push_button/flaps_10
   - index: 30
     name: flaps 25
     type: single
     icon: orange-button
-    label: Flaps 25
+    label: 25
     command: laminar/B738/push_button/flaps_25
   - index: 31
     name: flaps 40
     type: single
     icon: orange-button
-    label: Flaps 40
+    label: 40
     command: laminar/B738/push_button/flaps_40
 
 
