--- a/B737-800X/ctr.yaml
+++ b/B737-800X/ctr.yaml
@@ -48,13 +48,13 @@ actions:
     dataref: laminar/B738/autobrake/autobrake_pos
   - index: 7
     name: autobrake disarm
-    type: single
+    type: none
     icon: autobrakedisarm
     dataref: laminar/B738/annunciator/auto_brake_disarm
     dataref-multiplier: 1.5
   - index: 23
     name: anti skid inop
-    type: single
+    type: none
     icon: antiskidinop
     dataref: laminar/B738/annunciator/anti_skid_inop
     dataref-multiplier: 1.5
@@ -101,13 +101,13 @@ actions:
     command: laminar/B738/alert/below_gs_pilot
   - index: 1
     name: takeoff config
-    type: single
+    type: none
     icon: takeoffconfig
     dataref: laminar/B738/annunciator/takeoff_config
     dataref-multiplier: 1.5
   - index: 2
     name: cabin altitude
-    type: single
+    type: none
     icon: cabinaltitude
     dataref: laminar/B738/annunciator/cabin_alt
     dataref-multiplier: 1.5
