--- a/B737-800X/elec.yaml
+++ b/B737-800X/elec.yaml
@@ -112,7 +112,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: consola.ttf
+      font-path: IBMPlexMono-Bold.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -130,7 +130,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: consola.ttf
+      font-path: IBMPlexMono-Bold.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -149,7 +149,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: consola.ttf
+      font-path: IBMPlexMono-Bold.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -167,7 +167,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: consola.ttf
+      font-path: IBMPlexMono-Bold.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -185,7 +185,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: consola.ttf
+      font-path: IBMPlexMono-Bold.ttf
       font-size: 32
       zero-pad: False
       min: -100
