--- a/B737-800X/stbyhyd.yaml
+++ b/B737-800X/stbyhyd.yaml
@@ -8,9 +8,7 @@ actions:
   - index: 2
     name: flt ctl a cover
     type: single
-    file-names:
-      - blue-down
-      - red-down
+    icon: black-cover
     dataref: laminar/B738/switches/flt_ctr_A_cover_pos
     command: laminar/B738/toggle_switch/flt_ctr_A_cover
     label: COVER
@@ -43,9 +41,7 @@ actions:
   - index: 4
     name: flt ctl b cover
     type: single
-    file-names:
-      - blue-down
-      - red-down
+    icon: black-cover
     dataref: laminar/B738/switches/flt_ctr_B_cover_pos
     command: laminar/B738/toggle_switch/flt_ctr_B_cover
     label: COVER
