--- a/B737-800X/right.yaml
+++ b/B737-800X/right.yaml
@@ -39,15 +39,53 @@ actions:
   - index: 0
     name: slow zoom in
     type: single
-    icon: blue-button
+    icon: none
     command: FlyWithLua/streamdeck_handler/forward_start
     command-release: FlyWithLua/streamdeck_handler/forward_end
+    special-labels:
+      - label: ZOOM IN
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: DodgerBlue
+        direction: ltr
+        align: center
+      - label: SLOW
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 2
     name: fast zoom in
     type: single
-    icon: blue-button
+    icon: none
     command: FlyWithLua/streamdeck_handler/fforward_start
     command-release: FlyWithLua/streamdeck_handler/fforward_end
+    special-labels:
+      - label: ZOOM IN
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: DodgerBlue
+        direction: ltr
+        align: center
+      - label: FAST
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 1
     name: up view
     type: single
@@ -73,64 +111,228 @@ actions:
     command: FlyWithLua/streamdeck_handler/left_start
     command-release: FlyWithLua/streamdeck_handler/left_end
   - index: 16
-    name: backward
+    name: slow zoom out
     type: single
-    icon: orange-button
+    icon: none
     command: FlyWithLua/streamdeck_handler/backward_start
     command-release: FlyWithLua/streamdeck_handler/backward_end
+    special-labels:
+      - label: ZOOM OUT
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 20
+        color: orange
+        direction: ltr
+        align: center
+      - label: SLOW
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 18
-    name: backward fast
+    name: fast zoom out
     type: single
-    icon: orange-button
+    icon: none
     command: FlyWithLua/streamdeck_handler/fbackward_start
     command-release: FlyWithLua/streamdeck_handler/fbackward_end
+    special-labels:
+      - label: ZOOM OUT
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 20
+        color: orange
+        direction: ltr
+        align: center
+      - label: FAST
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 21
     name: doors
     type: dir
-    icon: dir
+    icon: dir-doors
     label: DOORS
   - index: 24
     name: white bright pax
     type: single
-    icon: yellow-button
+    icon: none-white
     command: laminar/B738/cabin/pax_white_bright
-    label: WHITE BRT
+    special-labels:
+      - label: CABIN
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: black
+        direction: ltr
+        align: center
+      - label: BRIGHT
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: black
+        direction: ltr
+        align: center
   - index: 25
     name: white medium pax
     type: single
-    icon: yellow-button
+    icon: none-gray
     command: laminar/B738/cabin/pax_white_medium
-    label: WHITE MED
+    special-labels:
+      - label: CABIN
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
+      - label: MED
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 26
     name: pax landing pax
     type: single
-    icon: yellow-button
+    icon: none-lime
     command: laminar/B738/cabin/pax_to_landing
-    label: TO LAND
+    special-labels:
+      - label: CABIN
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
+      - label: T/O LAND
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 20
+        color: white
+        direction: ltr
+        align: center
   - index: 27
     name: pax cruise pax
     type: single
-    icon: yellow-button
+    icon: none-purple
     command: laminar/B738/cabin/pax_cruise
-    label: CRUISE
+    special-labels:
+      - label: CABIN
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
+      - label: CRUISE
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 28
     name: dim pax
     type: single
-    icon: yellow-button
+    icon: none-dimblue
     command: laminar/B738/cabin/pax_night_sleep
-    label: DIM SLEEP
+    special-labels:
+      - label: CABIN
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
+      - label: SLEEP
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 19
     name: white bright entry
     type: single
-    icon: yellow-button
+    icon: none-white
     command: laminar/B738/cabin/entry_white_bright
-    label: BRT ENTRY
+    special-labels:
+      - label: ENTRY
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: black
+        direction: ltr
+        align: center
+      - label: BRIGHT
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: black
+        direction: ltr
+        align: center
   - index: 20
     name: white medium entry
     type: single
-    icon: yellow-button
+    icon: none-gray
     command: laminar/B738/cabin/entry_white_medium
-    label: MED ENTRY
+    special-labels:
+      - label: ENTRY
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
+      - label: MED
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 22
+        color: white
+        direction: ltr
+        align: center
   - index: 29
     name: park brake
     type: single
@@ -143,36 +345,36 @@ actions:
   - index: 22
     name: tab
     type: dir
-    icon: dir
+    icon: dir-avitab
     label: AVITAB
   - index: 15
     name: fire
     type: dir
-    icon: dir
+    icon: dir-fire
     label: FIRE
   - index: 3
     name: view 6
     type: single
     icon: eye
-    label: VIEW 6
+    label: OUTSIDE
     command: sim/view/quick_look_6
   - index: 11
     name: view 7
     type: single
     icon: eye
-    label: VIEW 7
+    label: LEFT FRONT
     command: sim/view/quick_look_7
   - index: 4
     name: view 8
     type: single
     icon: eye
-    label: VIEW 8
+    label: LEFT BACK
     command: sim/view/quick_look_8
   - index: 12
     name: view 9
     type: single
     icon: eye
-    label: VIEW 9
+    label: RIGHT BACK
     command: sim/view/quick_look_9
   - index: 5
     name: view 10
@@ -184,13 +386,13 @@ actions:
     name: view 11
     type: single
     icon: eye
-    label: FO SEAT
+    label: LOWER OVHD
     command: sim/view/quick_look_11
   - index: 6
     name: view 12
     type: single
     icon: eye
-    label: LOWER OVHD
+    label: F/O SEAT
     command: sim/view/quick_look_12
   - index: 14
     name: view 13
@@ -198,3 +400,36 @@ actions:
     icon: eye
     label: FMC
     command: sim/view/quick_look_13
+  - index: 9
+    name: credits
+    type: none
+    icon: none
+    special-labels:
+      - label: with love
+        text-center:
+          x: center
+          y: 30
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 16
+        color: white
+        direction: ltr
+        align: center
+      - label: by
+        text-center:
+          x: center
+          y: 55
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 16
+        color: white
+        direction: ltr
+        align: center
+      - label: wortelus
+        text-center:
+          x: center
+          y: 80
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 16
+        color: white
+        direction: ltr
+        align: center
+
