--- a/B737-800X/elec.yaml
+++ b/B737-800X/elec.yaml
@@ -93,7 +93,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -111,7 +111,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -130,7 +130,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -148,7 +148,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: False
       min: -100
@@ -166,7 +166,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: False
       min: -100
