--- a/B737-800X/mcpctl.yaml
+++ b/B737-800X/mcpctl.yaml
@@ -20,7 +20,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: 3
       min: 0
@@ -66,7 +66,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: 3
       min: 0
@@ -112,7 +112,7 @@ actions:
       text-center:
         x: center
         y: 58 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 24
       zero-pad: False
       min: 0
@@ -158,7 +158,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: False
       min: -8000
@@ -204,7 +204,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: 3
       min: 0
@@ -236,7 +236,7 @@ actions:
       text-center:
         x: center
         y: 60 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 32
       zero-pad: 3
       min: 0
