--- a/B737-800X/press.yaml
+++ b/B737-800X/press.yaml
@@ -36,7 +36,7 @@ actions:
       text-center:
         x: center
         y: 58 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 24
       zero-pad: False
       min: -1000
@@ -68,7 +68,7 @@ actions:
       text-center:
         x: center
         y: 58 # center doesn't work as it should, due to font's height
-      font-path: IBMPlexMono-Bold.ttf
+      font-path: DSEG14Classic-Regular.ttf
       font-size: 24
       zero-pad: False
       min: -1000
