--- a/B737-800X/rirsmode.yaml
+++ b/B737-800X/rirsmode.yaml
@@ -1,4 +1,28 @@
 actions:
+  - index: 3
+    name: right dc align
+    type: none
+    icon: align
+    dataref: laminar/B738/annunciator/irs_align_right
+    dataref-multiplier: 1.5
+  - index: 4
+    name: right irs on dc
+    type: none
+    icon: ondc
+    dataref: laminar/B738/annunciator/irs_on_dc_right
+    dataref-multiplier: 1.5
+  - index: 11
+    name: right irs fault
+    type: none
+    icon: fault
+    dataref: laminar/B738/annunciator/irs_align_fail_right
+    dataref-multiplier: 1.5
+  - index: 12
+    name: right irs dc fail
+    type: none
+    icon: dcfail
+    dataref: laminar/B738/annunciator/irs_dc_fail_right
+    dataref-multiplier: 1.5
   - index: 19
     name: return
     type: dir
