enhanced README.md and comments

--- a/secret.yaml
+++ b/secret.yaml
@@ -1,4 +1,5 @@
 # here comes the serial number of your Stream Deck
 # you could use the find_serial.py utility (recommended)
-# or should be written on the back of your Stream Deck (doesn't have to match with the one that LibUSB HIDAPI sees)
+# or should be written on the back of your Stream Deck
+# (although it doesn't have to match with the one that LibUSB HIDAPI sees... for some reason)
 serial: SET_YOUR_SERIAL_HERE
