unified constants and further work on refactoring

--- a/B737-800X/config.yaml
+++ b/B737-800X/config.yaml
@@ -11,7 +11,7 @@ only-uppercase: True
 # of the xplane-streamdeck, saving precious CPU power and time.
 # Leaving this enabled is recommended, unless you are actively debugging or reconfiguring the configuration/graphics.
 # Note that if you change some settings regarding the plane sets, you should delete the .pkl file to be reloaded
-# caching-enabled: False
+caching-enabled: True
 
 # this flag is used for overriding loaded configurations that the software detects automatically
 # force-config: sd15
