small fix and comments improvements

--- a/B737-800X/config.yaml
+++ b/B737-800X/config.yaml
@@ -3,7 +3,7 @@ default-font: IBMPlexMono-Bold.ttf
 default-font-size: 13
 
 # set False if you want lower case labels
-only-uppercase: True
+only-uppercase: True # True / False
 
 # use caching of the graphics
 # this creates a file in the plane's preset directory
@@ -11,8 +11,8 @@ only-uppercase: True
 # of the xplane-streamdeck, saving precious CPU power and time.
 # Leaving this enabled is recommended, unless you are actively debugging or reconfiguring the configuration/graphics.
 # Note that if you change some settings regarding the plane sets, you should delete the .pkl file to be reloaded
-caching-enabled: True
+caching-enabled: True  # True / False
 
 # this flag is used for overriding loaded configurations that the software detects automatically
 # force-config: sd15
-force-config: False
+force-config: False # [config-directory-name] / False
