polishing 737 15 key variant

--- a/B737-800X/sd15/ctr.yaml
+++ b/B737-800X/sd15/ctr.yaml
@@ -7,7 +7,7 @@ actions:
   - index: 13
     name: ctr2
     type: dir
-    icon: dir
+    icon: right
     label: PAGE 2
   - index: 12
     name: spdref
