--- a/B737-800X/sd15/gen.yaml
+++ b/B737-800X/sd15/gen.yaml
@@ -131,9 +131,7 @@ actions:
   - index: 7
     name: cover transfer bus
     type: single
-    file-names:
-      - blue-down
-      - red-down
+    icon: black-cover-rotated
     dataref: laminar/B738/button_switch/cover_position[6]
     command: laminar/B738/button_switch_cover06
     label: TR BUS COVER
