--- a/B737-800X/sd15/flaps.yaml
+++ b/B737-800X/sd15/flaps.yaml
@@ -1,5 +1,5 @@
 actions:
-  - index: 0
+  - index: 11
     name: return
     type: dir
     dataref: sim/flightmodel/misc/blown_flap_engage_rat
@@ -15,71 +15,152 @@ actions:
       min: 0.0
       max: 100
       step: 1
-  - index: 1
+  - index: 0
     name: move flaps up
     type: single
     icon: red-button
     label: MOVE UP
     command: FlyWithLua/B738/Cmd_MP_Flaps_Up
-  - index: 3
-    name: flaps up
-    type: single
-    icon: orange-button
-    label: UP
-    command: laminar/B738/push_button/flaps_0
-  - index: 5
-    name: flaps 1
-    type: single
-    icon: orange-button
-    label: 1
-    command: laminar/B738/push_button/flaps_1
-  - index: 7
-    name: flaps 5
-    type: single
-    icon: orange-button
-    label: 5
-    command: laminar/B738/push_button/flaps_5
-  - index: 9
-    name: flaps 15
-    type: single
-    icon: orange-button
-    label: 15
-    command: laminar/B738/push_button/flaps_15
-  - index: 11
-    name: flaps 30
-    type: single
-    icon: orange-button
-    label: 30
-    command: laminar/B738/push_button/flaps_30
-  - index: 2
+  - index: 10
     name: move flaps down
     type: single
     icon: blue-button
     label: MOVE DOWN
     command: FlyWithLua/B738/Cmd_MP_Flaps_Dn
-  - index: 6
+  - index: 2
+    name: flaps up
+    type: single
+    icon: none
+    command: laminar/B738/push_button/flaps_0
+    special-labels:
+      - label: UP
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: white
+        direction: ltr
+        align: center
+  - index: 3
+    name: flaps 1
+    type: single
+    icon: none
+    command: laminar/B738/push_button/flaps_1
+    special-labels:
+      - label: 1
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: khaki
+        direction: ltr
+        align: center
+  - index: 4
     name: flaps 2
     type: single
-    icon: orange-button
-    label: 2
+    icon: none
     command: laminar/B738/push_button/flaps_2
+    special-labels:
+      - label: 2
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: DarkKhaki
+        direction: ltr
+        align: center
+  - index: 7
+    name: flaps 5
+    type: single
+    icon: none
+    command: laminar/B738/push_button/flaps_5
+    special-labels:
+      - label: 5
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: yellow
+        direction: ltr
+        align: center
   - index: 8
     name: flaps 10
     type: single
-    icon: orange-button
-    label: 10
+    icon: none
     command: laminar/B738/push_button/flaps_10
-  - index: 10
+    special-labels:
+      - label: 10
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: LightSalmon
+        direction: ltr
+        align: center
+  - index: 9
+    name: flaps 15
+    type: single
+    icon: none
+    command: laminar/B738/push_button/flaps_15
+    special-labels:
+      - label: 15
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: Coral
+        direction: ltr
+        align: center
+  - index: 12
     name: flaps 25
     type: single
-    icon: orange-button
-    label: 25
+    icon: none
     command: laminar/B738/push_button/flaps_25
-  - index: 12
+    special-labels:
+      - label: 25
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: Tomato
+        direction: ltr
+        align: center
+  - index: 13
+    name: flaps 30
+    type: single
+    icon: none
+    command: laminar/B738/push_button/flaps_30
+    special-labels:
+      - label: 30
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: OrangeRed
+        direction: ltr
+        align: center
+  - index: 14
     name: flaps 40
     type: single
-    icon: orange-button
-    label: 40
+    icon: none
     command: laminar/B738/push_button/flaps_40
+    special-labels:
+      - label: 40
+        text-center:
+          x: center
+          y: 60
+        font-path: IBMPlexMono-Bold.ttf
+        font-size: 38
+        color: Red
+        direction: ltr
+        align: center
 
 
