missing annunciator multipliers for Zibo 737

--- a/B737-800X/sd15/fuel.yaml
+++ b/B737-800X/sd15/fuel.yaml
@@ -14,6 +14,7 @@ actions:
     name: low press left aft
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_l1
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 0
     name: fuel pump left aft
@@ -28,6 +29,7 @@ actions:
     name: low press left fwd
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_l2
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 1
     name: fuel pump left fwd
@@ -43,6 +45,7 @@ actions:
     name: low press right fwd
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_r2
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 3
     name: fuel pump right fwd
@@ -57,6 +60,7 @@ actions:
     name: low press right aft
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_r1
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 4
     name: fuel pump right aft
@@ -72,6 +76,7 @@ actions:
     name: low press ctr left
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_c1
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 10
     name: fuel pump ctr left
@@ -86,6 +91,7 @@ actions:
     name: low press ctr right
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_c2
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 12
     name: fuel pump ctr right
