--- a/B737-800X/sd15/hydai2.yaml
+++ b/B737-800X/sd15/hydai2.yaml
@@ -77,8 +77,10 @@ actions:
     type: none
     icon: cowlantiice
     dataref: laminar/B738/annunciator/cowl_ice_0
+    dataref-multiplier: 2.0
   - index: 3
     name: ann orange anti ice 2
     type: none
     icon: cowlantiice
     dataref: laminar/B738/annunciator/cowl_ice_1
+    dataref-multiplier: 2.0
