--- a/B737-800X/sd32/fuel.yaml
+++ b/B737-800X/sd32/fuel.yaml
@@ -9,6 +9,7 @@ actions:
     name: low press left aft
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_l1
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 25
     name: fuel pump left aft
@@ -23,6 +24,7 @@ actions:
     name: low press left fwd
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_l2
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 26
     name: fuel pump left fwd
@@ -38,6 +40,7 @@ actions:
     name: low press right fwd
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_r2
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 30
     name: fuel pump right fwd
@@ -52,6 +55,7 @@ actions:
     name: low press right aft
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_r1
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 31
     name: fuel pump right aft
@@ -67,6 +71,7 @@ actions:
     name: low press ctr left
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_c1
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 19
     name: fuel pump ctr left
@@ -81,6 +86,7 @@ actions:
     name: low press ctr right
     type: none
     dataref: laminar/B738/annunciator/low_fuel_press_c2
+    dataref-multiplier: 2.0
     icon: lowpressure
   - index: 21
     name: fuel pump ctr right
