--- a/B737-800X/sd32/fltctlnav.yaml
+++ b/B737-800X/sd32/fltctlnav.yaml
@@ -84,19 +84,23 @@ actions:
     type: none
     icon: feeldiffpress
     dataref: laminar/B738/annunciator/feel_diff_press
+    dataref-multiplier: 2.0
   - index: 15
     name: speed trim fail
     type: none
     icon: speedtrimfail.0.0
+    # TODO: Add missing dataref
   - index: 23
     name: mach trim fail
     type: none
     icon: machtrimfail.0.0
+    # TODO: Add missing dataref
   - index: 31
     name:  auto slat fail
     type: none
     icon: autoslatfail
     dataref: laminar/B738/annunciator/auto_slat_fail
+    dataref-multiplier: 2.0
   - index: 11
     name: spoiler a cover
     type: single
@@ -190,3 +194,4 @@ actions:
     type: none
     icon: yawdamper
     dataref: laminar/B738/annunciator/yaw_damp
+    dataref-multiplier: 2.0
