--- a/secret.yaml
+++ b/secret.yaml
@@ -1,3 +1,7 @@
+#
+# you don't have to edit this file if you are actively using just one Stream Deck
+#
+
 # here comes the serial number of your Stream Deck
 # you could use the find_serial.py utility (recommended)
 # or should be written on the back of your Stream Deck
